versions/0.8.0/_sources/refs/_aws-cdk_aws-opsworks.rst.txt
.. @jsii-pacmak:meta@ {"fingerprint":"5BVPLkx4EueI926ymJ8ur+3Vl8MijGDQ6NJLowzlVnY="}

@aws-cdk/aws-opsworks
=====================

.. mdinclude:: ./__aws-cdk_aws-opsworks.README.md

Reference
---------

.. py:module:: @aws-cdk/aws-opsworks

InstanceAvailabilityZone
^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: InstanceAvailabilityZone([valueOrFunction])

   :extends: :py:class:`@aws-cdk/cdk.Token`
   :param valueOrFunction: 
   :type valueOrFunction: any or undefined

InstancePrivateDnsName
^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: InstancePrivateDnsName([valueOrFunction])

   :extends: :py:class:`@aws-cdk/cdk.Token`
   :param valueOrFunction: 
   :type valueOrFunction: any or undefined

InstancePrivateIp
^^^^^^^^^^^^^^^^^

.. py:class:: InstancePrivateIp([valueOrFunction])

   :extends: :py:class:`@aws-cdk/cdk.Token`
   :param valueOrFunction: 
   :type valueOrFunction: any or undefined

InstancePublicDnsName
^^^^^^^^^^^^^^^^^^^^^

.. py:class:: InstancePublicDnsName([valueOrFunction])

   :extends: :py:class:`@aws-cdk/cdk.Token`
   :param valueOrFunction: 
   :type valueOrFunction: any or undefined

InstancePublicIp
^^^^^^^^^^^^^^^^

.. py:class:: InstancePublicIp([valueOrFunction])

   :extends: :py:class:`@aws-cdk/cdk.Token`
   :param valueOrFunction: 
   :type valueOrFunction: any or undefined

UserProfileSshUsername
^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: UserProfileSshUsername([valueOrFunction])

   :extends: :py:class:`@aws-cdk/cdk.Token`
   :param valueOrFunction: 
   :type valueOrFunction: any or undefined


cloudformation
^^^^^^^^^^^^^^
.. py:module:: @aws-cdk/aws-opsworks.cloudformation

AppResource
~~~~~~~~~~~

.. py:class:: AppResource(parent, name, properties)

   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``AppResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``AppResource``
   :type properties: :py:class:`~@aws-cdk/aws-opsworks.cloudformation.AppResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*

   .. py:class:: DataSourceProperty



      .. py:attribute:: arn

         ``AppResource.DataSourceProperty.Arn``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-opsworks-app-datasource.html#cfn-opsworks-app-datasource-arn


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: databaseName

         ``AppResource.DataSourceProperty.DatabaseName``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-opsworks-app-datasource.html#cfn-opsworks-app-datasource-databasename


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: type

         ``AppResource.DataSourceProperty.Type``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-opsworks-app-datasource.html#cfn-opsworks-app-datasource-type


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:class:: EnvironmentVariableProperty



      .. py:attribute:: key

         ``AppResource.EnvironmentVariableProperty.Key``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-opsworks-app-environment.html#cfn-opsworks-app-environment-key


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: secure

         ``AppResource.EnvironmentVariableProperty.Secure``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-opsworks-app-environment.html#cfn-opsworks-app-environment-secure


         :type: boolean or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: value

         ``AppResource.EnvironmentVariableProperty.Value``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-opsworks-app-environment.html#value


         :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:class:: SourceProperty



      .. py:attribute:: password

         ``AppResource.SourceProperty.Password``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-opsworks-stack-source.html#cfn-opsworks-custcookbooksource-pw


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: revision

         ``AppResource.SourceProperty.Revision``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-opsworks-stack-source.html#cfn-opsworks-custcookbooksource-revision


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: sshKey

         ``AppResource.SourceProperty.SshKey``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-opsworks-stack-source.html#cfn-opsworks-custcookbooksource-sshkey


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: type

         ``AppResource.SourceProperty.Type``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-opsworks-stack-source.html#cfn-opsworks-custcookbooksource-type


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: url

         ``AppResource.SourceProperty.Url``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-opsworks-stack-source.html#cfn-opsworks-custcookbooksource-url


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: username

         ``AppResource.SourceProperty.Username``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-opsworks-stack-source.html#cfn-opsworks-custcookbooksource-username


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:class:: SslConfigurationProperty



      .. py:attribute:: certificate

         ``AppResource.SslConfigurationProperty.Certificate``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-opsworks-app-sslconfiguration.html#cfn-opsworks-app-sslconfig-certificate


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: chain

         ``AppResource.SslConfigurationProperty.Chain``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-opsworks-app-sslconfiguration.html#cfn-opsworks-app-sslconfig-chain


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: privateKey

         ``AppResource.SslConfigurationProperty.PrivateKey``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-opsworks-app-sslconfiguration.html#cfn-opsworks-app-sslconfig-privatekey


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined



AppResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: AppResourceProps



   .. py:attribute:: appName

      ``AWS::OpsWorks::App.Name``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-app.html#cfn-opsworks-app-name


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: stackId

      ``AWS::OpsWorks::App.StackId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-app.html#cfn-opsworks-app-stackid


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: type

      ``AWS::OpsWorks::App.Type``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-app.html#cfn-opsworks-app-type


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: appSource

      ``AWS::OpsWorks::App.AppSource``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-app.html#cfn-opsworks-app-appsource


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-opsworks.cloudformation.AppResource.SourceProperty` or undefined


   .. py:attribute:: attributes

      ``AWS::OpsWorks::App.Attributes``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-app.html#cfn-opsworks-app-attributes


      :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: dataSources

      ``AWS::OpsWorks::App.DataSources``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-app.html#cfn-opsworks-app-datasources


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-opsworks.cloudformation.AppResource.DataSourceProperty` or undefined


   .. py:attribute:: description

      ``AWS::OpsWorks::App.Description``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-app.html#cfn-opsworks-app-description


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: domains

      ``AWS::OpsWorks::App.Domains``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-app.html#cfn-opsworks-app-domains


      :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: enableSsl

      ``AWS::OpsWorks::App.EnableSsl``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-app.html#cfn-opsworks-app-enablessl


      :type: boolean or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: environment

      ``AWS::OpsWorks::App.Environment``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-app.html#cfn-opsworks-app-environment


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-opsworks.cloudformation.AppResource.EnvironmentVariableProperty` or undefined


   .. py:attribute:: shortname

      ``AWS::OpsWorks::App.Shortname``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-app.html#cfn-opsworks-app-shortname


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: sslConfiguration

      ``AWS::OpsWorks::App.SslConfiguration``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-app.html#cfn-opsworks-app-sslconfiguration


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-opsworks.cloudformation.AppResource.SslConfigurationProperty` or undefined


ElasticLoadBalancerAttachmentResource
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: ElasticLoadBalancerAttachmentResource(parent, name, properties)

   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``ElasticLoadBalancerAttachmentResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``ElasticLoadBalancerAttachmentResource``
   :type properties: :py:class:`~@aws-cdk/aws-opsworks.cloudformation.ElasticLoadBalancerAttachmentResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


ElasticLoadBalancerAttachmentResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: ElasticLoadBalancerAttachmentResourceProps



   .. py:attribute:: elasticLoadBalancerName

      ``AWS::OpsWorks::ElasticLoadBalancerAttachment.ElasticLoadBalancerName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-elbattachment.html#cfn-opsworks-elbattachment-elbname


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: layerId

      ``AWS::OpsWorks::ElasticLoadBalancerAttachment.LayerId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-elbattachment.html#cfn-opsworks-elbattachment-layerid


      :type: string or :py:class:`@aws-cdk/cdk.Token`


InstanceResource
~~~~~~~~~~~~~~~~

.. py:class:: InstanceResource(parent, name, properties)

   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``InstanceResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``InstanceResource``
   :type properties: :py:class:`~@aws-cdk/aws-opsworks.cloudformation.InstanceResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


   .. py:attribute:: instanceAvailabilityZone

      :type: :py:class:`~@aws-cdk/aws-opsworks.InstanceAvailabilityZone` *(readonly)*


   .. py:attribute:: instancePrivateDnsName

      :type: :py:class:`~@aws-cdk/aws-opsworks.InstancePrivateDnsName` *(readonly)*


   .. py:attribute:: instancePrivateIp

      :type: :py:class:`~@aws-cdk/aws-opsworks.InstancePrivateIp` *(readonly)*


   .. py:attribute:: instancePublicDnsName

      :type: :py:class:`~@aws-cdk/aws-opsworks.InstancePublicDnsName` *(readonly)*


   .. py:attribute:: instancePublicIp

      :type: :py:class:`~@aws-cdk/aws-opsworks.InstancePublicIp` *(readonly)*

   .. py:class:: BlockDeviceMappingProperty



      .. py:attribute:: deviceName

         ``InstanceResource.BlockDeviceMappingProperty.DeviceName``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-opsworks-instance-blockdevicemapping.html#cfn-opsworks-instance-blockdevicemapping-devicename


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: ebs

         ``InstanceResource.BlockDeviceMappingProperty.Ebs``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-opsworks-instance-blockdevicemapping.html#cfn-opsworks-instance-blockdevicemapping-ebs


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-opsworks.cloudformation.InstanceResource.EbsBlockDeviceProperty` or undefined


      .. py:attribute:: noDevice

         ``InstanceResource.BlockDeviceMappingProperty.NoDevice``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-opsworks-instance-blockdevicemapping.html#cfn-opsworks-instance-blockdevicemapping-nodevice


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: virtualName

         ``InstanceResource.BlockDeviceMappingProperty.VirtualName``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-opsworks-instance-blockdevicemapping.html#cfn-opsworks-instance-blockdevicemapping-virtualname


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:class:: EbsBlockDeviceProperty



      .. py:attribute:: deleteOnTermination

         ``InstanceResource.EbsBlockDeviceProperty.DeleteOnTermination``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-opsworks-instance-ebsblockdevice.html#cfn-opsworks-instance-ebsblockdevice-deleteontermination


         :type: boolean or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: iops

         ``InstanceResource.EbsBlockDeviceProperty.Iops``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-opsworks-instance-ebsblockdevice.html#cfn-opsworks-instance-ebsblockdevice-iops


         :type: number or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: snapshotId

         ``InstanceResource.EbsBlockDeviceProperty.SnapshotId``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-opsworks-instance-ebsblockdevice.html#cfn-opsworks-instance-ebsblockdevice-snapshotid


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: volumeSize

         ``InstanceResource.EbsBlockDeviceProperty.VolumeSize``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-opsworks-instance-ebsblockdevice.html#cfn-opsworks-instance-ebsblockdevice-volumesize


         :type: number or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: volumeType

         ``InstanceResource.EbsBlockDeviceProperty.VolumeType``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-opsworks-instance-ebsblockdevice.html#cfn-opsworks-instance-ebsblockdevice-volumetype


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:class:: TimeBasedAutoScalingProperty



      .. py:attribute:: friday

         ``InstanceResource.TimeBasedAutoScalingProperty.Friday``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-opsworks-instance-timebasedautoscaling.html#cfn-opsworks-instance-timebasedautoscaling-friday


         :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: monday

         ``InstanceResource.TimeBasedAutoScalingProperty.Monday``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-opsworks-instance-timebasedautoscaling.html#cfn-opsworks-instance-timebasedautoscaling-monday


         :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: saturday

         ``InstanceResource.TimeBasedAutoScalingProperty.Saturday``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-opsworks-instance-timebasedautoscaling.html#cfn-opsworks-instance-timebasedautoscaling-saturday


         :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: sunday

         ``InstanceResource.TimeBasedAutoScalingProperty.Sunday``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-opsworks-instance-timebasedautoscaling.html#cfn-opsworks-instance-timebasedautoscaling-sunday


         :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: thursday

         ``InstanceResource.TimeBasedAutoScalingProperty.Thursday``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-opsworks-instance-timebasedautoscaling.html#cfn-opsworks-instance-timebasedautoscaling-thursday


         :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: tuesday

         ``InstanceResource.TimeBasedAutoScalingProperty.Tuesday``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-opsworks-instance-timebasedautoscaling.html#cfn-opsworks-instance-timebasedautoscaling-tuesday


         :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: wednesday

         ``InstanceResource.TimeBasedAutoScalingProperty.Wednesday``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-opsworks-instance-timebasedautoscaling.html#cfn-opsworks-instance-timebasedautoscaling-wednesday


         :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined



InstanceResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: InstanceResourceProps



   .. py:attribute:: instanceType

      ``AWS::OpsWorks::Instance.InstanceType``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-instance.html#cfn-opsworks-instance-instancetype


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: layerIds

      ``AWS::OpsWorks::Instance.LayerIds``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-instance.html#cfn-opsworks-instance-layerids


      :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: stackId

      ``AWS::OpsWorks::Instance.StackId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-instance.html#cfn-opsworks-instance-stackid


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: agentVersion

      ``AWS::OpsWorks::Instance.AgentVersion``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-instance.html#cfn-opsworks-instance-agentversion


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: amiId

      ``AWS::OpsWorks::Instance.AmiId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-instance.html#cfn-opsworks-instance-amiid


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: architecture

      ``AWS::OpsWorks::Instance.Architecture``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-instance.html#cfn-opsworks-instance-architecture


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: autoScalingType

      ``AWS::OpsWorks::Instance.AutoScalingType``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-instance.html#cfn-opsworks-instance-autoscalingtype


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: availabilityZone

      ``AWS::OpsWorks::Instance.AvailabilityZone``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-instance.html#cfn-opsworks-instance-availabilityzone


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: blockDeviceMappings

      ``AWS::OpsWorks::Instance.BlockDeviceMappings``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-instance.html#cfn-opsworks-instance-blockdevicemappings


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-opsworks.cloudformation.InstanceResource.BlockDeviceMappingProperty` or undefined


   .. py:attribute:: ebsOptimized

      ``AWS::OpsWorks::Instance.EbsOptimized``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-instance.html#cfn-opsworks-instance-ebsoptimized


      :type: boolean or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: elasticIps

      ``AWS::OpsWorks::Instance.ElasticIps``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-instance.html#cfn-opsworks-instance-elasticips


      :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: hostname

      ``AWS::OpsWorks::Instance.Hostname``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-instance.html#cfn-opsworks-instance-hostname


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: installUpdatesOnBoot

      ``AWS::OpsWorks::Instance.InstallUpdatesOnBoot``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-instance.html#cfn-opsworks-instance-installupdatesonboot


      :type: boolean or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: os

      ``AWS::OpsWorks::Instance.Os``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-instance.html#cfn-opsworks-instance-os


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: rootDeviceType

      ``AWS::OpsWorks::Instance.RootDeviceType``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-instance.html#cfn-opsworks-instance-rootdevicetype


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: sshKeyName

      ``AWS::OpsWorks::Instance.SshKeyName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-instance.html#cfn-opsworks-instance-sshkeyname


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: subnetId

      ``AWS::OpsWorks::Instance.SubnetId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-instance.html#cfn-opsworks-instance-subnetid


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: tenancy

      ``AWS::OpsWorks::Instance.Tenancy``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-instance.html#cfn-opsworks-instance-tenancy


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: timeBasedAutoScaling

      ``AWS::OpsWorks::Instance.TimeBasedAutoScaling``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-instance.html#cfn-opsworks-instance-timebasedautoscaling


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-opsworks.cloudformation.InstanceResource.TimeBasedAutoScalingProperty` or undefined


   .. py:attribute:: virtualizationType

      ``AWS::OpsWorks::Instance.VirtualizationType``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-instance.html#cfn-opsworks-instance-virtualizationtype


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: volumes

      ``AWS::OpsWorks::Instance.Volumes``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-instance.html#cfn-opsworks-instance-volumes


      :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined


LayerResource
~~~~~~~~~~~~~

.. py:class:: LayerResource(parent, name, properties)

   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``LayerResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``LayerResource``
   :type properties: :py:class:`~@aws-cdk/aws-opsworks.cloudformation.LayerResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*

   .. py:class:: AutoScalingThresholdsProperty



      .. py:attribute:: cpuThreshold

         ``LayerResource.AutoScalingThresholdsProperty.CpuThreshold``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-opsworks-layer-loadbasedautoscaling-autoscalingthresholds.html#cfn-opsworks-layer-loadbasedautoscaling-autoscalingthresholds-cputhreshold


         :type: number or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: ignoreMetricsTime

         ``LayerResource.AutoScalingThresholdsProperty.IgnoreMetricsTime``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-opsworks-layer-loadbasedautoscaling-autoscalingthresholds.html#cfn-opsworks-layer-loadbasedautoscaling-autoscalingthresholds-ignoremetricstime


         :type: number or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: instanceCount

         ``LayerResource.AutoScalingThresholdsProperty.InstanceCount``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-opsworks-layer-loadbasedautoscaling-autoscalingthresholds.html#cfn-opsworks-layer-loadbasedautoscaling-autoscalingthresholds-instancecount


         :type: number or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: loadThreshold

         ``LayerResource.AutoScalingThresholdsProperty.LoadThreshold``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-opsworks-layer-loadbasedautoscaling-autoscalingthresholds.html#cfn-opsworks-layer-loadbasedautoscaling-autoscalingthresholds-loadthreshold


         :type: number or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: memoryThreshold

         ``LayerResource.AutoScalingThresholdsProperty.MemoryThreshold``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-opsworks-layer-loadbasedautoscaling-autoscalingthresholds.html#cfn-opsworks-layer-loadbasedautoscaling-autoscalingthresholds-memorythreshold


         :type: number or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: thresholdsWaitTime

         ``LayerResource.AutoScalingThresholdsProperty.ThresholdsWaitTime``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-opsworks-layer-loadbasedautoscaling-autoscalingthresholds.html#cfn-opsworks-layer-loadbasedautoscaling-autoscalingthresholds-thresholdwaittime


         :type: number or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:class:: LifecycleEventConfigurationProperty



      .. py:attribute:: shutdownEventConfiguration

         ``LayerResource.LifecycleEventConfigurationProperty.ShutdownEventConfiguration``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-opsworks-layer-lifecycleeventconfiguration.html#cfn-opsworks-layer-lifecycleconfiguration-shutdowneventconfiguration


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-opsworks.cloudformation.LayerResource.ShutdownEventConfigurationProperty` or undefined


   .. py:class:: LoadBasedAutoScalingProperty



      .. py:attribute:: downScaling

         ``LayerResource.LoadBasedAutoScalingProperty.DownScaling``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-opsworks-layer-loadbasedautoscaling.html#cfn-opsworks-layer-loadbasedautoscaling-downscaling


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-opsworks.cloudformation.LayerResource.AutoScalingThresholdsProperty` or undefined


      .. py:attribute:: enable

         ``LayerResource.LoadBasedAutoScalingProperty.Enable``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-opsworks-layer-loadbasedautoscaling.html#cfn-opsworks-layer-loadbasedautoscaling-enable


         :type: boolean or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: upScaling

         ``LayerResource.LoadBasedAutoScalingProperty.UpScaling``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-opsworks-layer-loadbasedautoscaling.html#cfn-opsworks-layer-loadbasedautoscaling-upscaling


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-opsworks.cloudformation.LayerResource.AutoScalingThresholdsProperty` or undefined


   .. py:class:: RecipesProperty



      .. py:attribute:: configure

         ``LayerResource.RecipesProperty.Configure``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-opsworks-layer-recipes.html#cfn-opsworks-layer-customrecipes-configure


         :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: deploy

         ``LayerResource.RecipesProperty.Deploy``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-opsworks-layer-recipes.html#cfn-opsworks-layer-customrecipes-deploy


         :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: setup

         ``LayerResource.RecipesProperty.Setup``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-opsworks-layer-recipes.html#cfn-opsworks-layer-customrecipes-setup


         :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: shutdown

         ``LayerResource.RecipesProperty.Shutdown``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-opsworks-layer-recipes.html#cfn-opsworks-layer-customrecipes-shutdown


         :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: undeploy

         ``LayerResource.RecipesProperty.Undeploy``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-opsworks-layer-recipes.html#cfn-opsworks-layer-customrecipes-undeploy


         :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:class:: ShutdownEventConfigurationProperty



      .. py:attribute:: delayUntilElbConnectionsDrained

         ``LayerResource.ShutdownEventConfigurationProperty.DelayUntilElbConnectionsDrained``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-opsworks-layer-lifecycleeventconfiguration-shutdowneventconfiguration.html#cfn-opsworks-layer-lifecycleconfiguration-shutdowneventconfiguration-delayuntilelbconnectionsdrained


         :type: boolean or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: executionTimeout

         ``LayerResource.ShutdownEventConfigurationProperty.ExecutionTimeout``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-opsworks-layer-lifecycleeventconfiguration-shutdowneventconfiguration.html#cfn-opsworks-layer-lifecycleconfiguration-shutdowneventconfiguration-executiontimeout


         :type: number or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:class:: VolumeConfigurationProperty



      .. py:attribute:: iops

         ``LayerResource.VolumeConfigurationProperty.Iops``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-opsworks-layer-volumeconfiguration.html#cfn-opsworks-layer-volconfig-iops


         :type: number or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: mountPoint

         ``LayerResource.VolumeConfigurationProperty.MountPoint``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-opsworks-layer-volumeconfiguration.html#cfn-opsworks-layer-volconfig-mountpoint


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: numberOfDisks

         ``LayerResource.VolumeConfigurationProperty.NumberOfDisks``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-opsworks-layer-volumeconfiguration.html#cfn-opsworks-layer-volconfig-numberofdisks


         :type: number or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: raidLevel

         ``LayerResource.VolumeConfigurationProperty.RaidLevel``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-opsworks-layer-volumeconfiguration.html#cfn-opsworks-layer-volconfig-raidlevel


         :type: number or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: size

         ``LayerResource.VolumeConfigurationProperty.Size``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-opsworks-layer-volumeconfiguration.html#cfn-opsworks-layer-volconfig-size


         :type: number or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: volumeType

         ``LayerResource.VolumeConfigurationProperty.VolumeType``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-opsworks-layer-volumeconfiguration.html#cfn-opsworks-layer-volconfig-volumetype


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined



LayerResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: LayerResourceProps



   .. py:attribute:: autoAssignElasticIps

      ``AWS::OpsWorks::Layer.AutoAssignElasticIps``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-layer.html#cfn-opsworks-layer-autoassignelasticips


      :type: boolean or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: autoAssignPublicIps

      ``AWS::OpsWorks::Layer.AutoAssignPublicIps``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-layer.html#cfn-opsworks-layer-autoassignpublicips


      :type: boolean or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: enableAutoHealing

      ``AWS::OpsWorks::Layer.EnableAutoHealing``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-layer.html#cfn-opsworks-layer-enableautohealing


      :type: boolean or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: layerName

      ``AWS::OpsWorks::Layer.Name``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-layer.html#cfn-opsworks-layer-name


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: shortname

      ``AWS::OpsWorks::Layer.Shortname``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-layer.html#cfn-opsworks-layer-shortname


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: stackId

      ``AWS::OpsWorks::Layer.StackId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-layer.html#cfn-opsworks-layer-stackid


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: type

      ``AWS::OpsWorks::Layer.Type``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-layer.html#cfn-opsworks-layer-type


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: attributes

      ``AWS::OpsWorks::Layer.Attributes``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-layer.html#cfn-opsworks-layer-attributes


      :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: customInstanceProfileArn

      ``AWS::OpsWorks::Layer.CustomInstanceProfileArn``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-layer.html#cfn-opsworks-layer-custominstanceprofilearn


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: customJson

      ``AWS::OpsWorks::Layer.CustomJson``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-layer.html#cfn-opsworks-layer-customjson


      :type: json or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: customRecipes

      ``AWS::OpsWorks::Layer.CustomRecipes``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-layer.html#cfn-opsworks-layer-customrecipes


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-opsworks.cloudformation.LayerResource.RecipesProperty` or undefined


   .. py:attribute:: customSecurityGroupIds

      ``AWS::OpsWorks::Layer.CustomSecurityGroupIds``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-layer.html#cfn-opsworks-layer-customsecuritygroupids


      :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: installUpdatesOnBoot

      ``AWS::OpsWorks::Layer.InstallUpdatesOnBoot``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-layer.html#cfn-opsworks-layer-installupdatesonboot


      :type: boolean or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: lifecycleEventConfiguration

      ``AWS::OpsWorks::Layer.LifecycleEventConfiguration``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-layer.html#cfn-opsworks-layer-lifecycleeventconfiguration


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-opsworks.cloudformation.LayerResource.LifecycleEventConfigurationProperty` or undefined


   .. py:attribute:: loadBasedAutoScaling

      ``AWS::OpsWorks::Layer.LoadBasedAutoScaling``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-layer.html#cfn-opsworks-layer-loadbasedautoscaling


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-opsworks.cloudformation.LayerResource.LoadBasedAutoScalingProperty` or undefined


   .. py:attribute:: packages

      ``AWS::OpsWorks::Layer.Packages``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-layer.html#cfn-opsworks-layer-packages


      :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: tags

      ``AWS::OpsWorks::Layer.Tags``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-layer.html#cfn-opsworks-layer-tags


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Tag` or undefined


   .. py:attribute:: useEbsOptimizedInstances

      ``AWS::OpsWorks::Layer.UseEbsOptimizedInstances``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-layer.html#cfn-opsworks-layer-useebsoptimizedinstances


      :type: boolean or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: volumeConfigurations

      ``AWS::OpsWorks::Layer.VolumeConfigurations``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-layer.html#cfn-opsworks-layer-volumeconfigurations


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-opsworks.cloudformation.LayerResource.VolumeConfigurationProperty` or undefined


StackResource
~~~~~~~~~~~~~

.. py:class:: StackResource(parent, name, properties)

   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``StackResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``StackResource``
   :type properties: :py:class:`~@aws-cdk/aws-opsworks.cloudformation.StackResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*

   .. py:class:: ChefConfigurationProperty



      .. py:attribute:: berkshelfVersion

         ``StackResource.ChefConfigurationProperty.BerkshelfVersion``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-opsworks-stack-chefconfiguration.html#cfn-opsworks-chefconfiguration-berkshelfversion


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: manageBerkshelf

         ``StackResource.ChefConfigurationProperty.ManageBerkshelf``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-opsworks-stack-chefconfiguration.html#cfn-opsworks-chefconfiguration-berkshelfversion


         :type: boolean or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:class:: ElasticIpProperty



      .. py:attribute:: ip

         ``StackResource.ElasticIpProperty.Ip``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-opsworks-stack-elasticip.html#cfn-opsworks-stack-elasticip-ip


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: name

         ``StackResource.ElasticIpProperty.Name``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-opsworks-stack-elasticip.html#cfn-opsworks-stack-elasticip-name


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:class:: RdsDbInstanceProperty



      .. py:attribute:: dbPassword

         ``StackResource.RdsDbInstanceProperty.DbPassword``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-opsworks-stack-rdsdbinstance.html#cfn-opsworks-stack-rdsdbinstance-dbpassword


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: dbUser

         ``StackResource.RdsDbInstanceProperty.DbUser``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-opsworks-stack-rdsdbinstance.html#cfn-opsworks-stack-rdsdbinstance-dbuser


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: rdsDbInstanceArn

         ``StackResource.RdsDbInstanceProperty.RdsDbInstanceArn``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-opsworks-stack-rdsdbinstance.html#cfn-opsworks-stack-rdsdbinstance-rdsdbinstancearn


         :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:class:: SourceProperty



      .. py:attribute:: password

         ``StackResource.SourceProperty.Password``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-opsworks-stack-source.html#cfn-opsworks-custcookbooksource-password


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: revision

         ``StackResource.SourceProperty.Revision``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-opsworks-stack-source.html#cfn-opsworks-custcookbooksource-revision


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: sshKey

         ``StackResource.SourceProperty.SshKey``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-opsworks-stack-source.html#cfn-opsworks-custcookbooksource-sshkey


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: type

         ``StackResource.SourceProperty.Type``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-opsworks-stack-source.html#cfn-opsworks-custcookbooksource-type


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: url

         ``StackResource.SourceProperty.Url``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-opsworks-stack-source.html#cfn-opsworks-custcookbooksource-url


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: username

         ``StackResource.SourceProperty.Username``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-opsworks-stack-source.html#cfn-opsworks-custcookbooksource-username


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:class:: StackConfigurationManagerProperty



      .. py:attribute:: name

         ``StackResource.StackConfigurationManagerProperty.Name``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-opsworks-stack-stackconfigmanager.html#cfn-opsworks-configmanager-name


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: version

         ``StackResource.StackConfigurationManagerProperty.Version``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-opsworks-stack-stackconfigmanager.html#cfn-opsworks-configmanager-version


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined



StackResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: StackResourceProps



   .. py:attribute:: defaultInstanceProfileArn

      ``AWS::OpsWorks::Stack.DefaultInstanceProfileArn``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-stack.html#cfn-opsworks-stack-defaultinstanceprof


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: stackName

      ``AWS::OpsWorks::Stack.Name``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-stack.html#cfn-opsworks-stack-name


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: serviceRoleArn

      ``AWS::OpsWorks::Stack.ServiceRoleArn``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-stack.html#cfn-opsworks-stack-servicerolearn


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: agentVersion

      ``AWS::OpsWorks::Stack.AgentVersion``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-stack.html#cfn-opsworks-stack-agentversion


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: attributes

      ``AWS::OpsWorks::Stack.Attributes``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-stack.html#cfn-opsworks-stack-attributes


      :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: chefConfiguration

      ``AWS::OpsWorks::Stack.ChefConfiguration``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-stack.html#cfn-opsworks-stack-chefconfiguration


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-opsworks.cloudformation.StackResource.ChefConfigurationProperty` or undefined


   .. py:attribute:: cloneAppIds

      ``AWS::OpsWorks::Stack.CloneAppIds``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-stack.html#cfn-opsworks-stack-cloneappids


      :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: clonePermissions

      ``AWS::OpsWorks::Stack.ClonePermissions``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-stack.html#cfn-opsworks-stack-clonepermissions


      :type: boolean or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: configurationManager

      ``AWS::OpsWorks::Stack.ConfigurationManager``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-stack.html#cfn-opsworks-stack-configmanager


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-opsworks.cloudformation.StackResource.StackConfigurationManagerProperty` or undefined


   .. py:attribute:: customCookbooksSource

      ``AWS::OpsWorks::Stack.CustomCookbooksSource``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-stack.html#cfn-opsworks-stack-custcookbooksource


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-opsworks.cloudformation.StackResource.SourceProperty` or undefined


   .. py:attribute:: customJson

      ``AWS::OpsWorks::Stack.CustomJson``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-stack.html#cfn-opsworks-stack-custjson


      :type: json or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: defaultAvailabilityZone

      ``AWS::OpsWorks::Stack.DefaultAvailabilityZone``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-stack.html#cfn-opsworks-stack-defaultaz


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: defaultOs

      ``AWS::OpsWorks::Stack.DefaultOs``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-stack.html#cfn-opsworks-stack-defaultos


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: defaultRootDeviceType

      ``AWS::OpsWorks::Stack.DefaultRootDeviceType``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-stack.html#cfn-opsworks-stack-defaultrootdevicetype


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: defaultSshKeyName

      ``AWS::OpsWorks::Stack.DefaultSshKeyName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-stack.html#cfn-opsworks-stack-defaultsshkeyname


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: defaultSubnetId

      ``AWS::OpsWorks::Stack.DefaultSubnetId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-stack.html#defaultsubnet


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: ecsClusterArn

      ``AWS::OpsWorks::Stack.EcsClusterArn``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-stack.html#cfn-opsworks-stack-ecsclusterarn


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: elasticIps

      ``AWS::OpsWorks::Stack.ElasticIps``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-stack.html#cfn-opsworks-stack-elasticips


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-opsworks.cloudformation.StackResource.ElasticIpProperty` or undefined


   .. py:attribute:: hostnameTheme

      ``AWS::OpsWorks::Stack.HostnameTheme``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-stack.html#cfn-opsworks-stack-hostnametheme


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: rdsDbInstances

      ``AWS::OpsWorks::Stack.RdsDbInstances``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-stack.html#cfn-opsworks-stack-rdsdbinstances


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-opsworks.cloudformation.StackResource.RdsDbInstanceProperty` or undefined


   .. py:attribute:: sourceStackId

      ``AWS::OpsWorks::Stack.SourceStackId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-stack.html#cfn-opsworks-stack-sourcestackid


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: tags

      ``AWS::OpsWorks::Stack.Tags``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-stack.html#cfn-opsworks-stack-tags


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Tag` or undefined


   .. py:attribute:: useCustomCookbooks

      ``AWS::OpsWorks::Stack.UseCustomCookbooks``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-stack.html#usecustcookbooks


      :type: boolean or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: useOpsworksSecurityGroups

      ``AWS::OpsWorks::Stack.UseOpsworksSecurityGroups``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-stack.html#cfn-opsworks-stack-useopsworkssecuritygroups


      :type: boolean or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: vpcId

      ``AWS::OpsWorks::Stack.VpcId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-stack.html#cfn-opsworks-stack-vpcid


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


UserProfileResource
~~~~~~~~~~~~~~~~~~~

.. py:class:: UserProfileResource(parent, name, properties)

   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``UserProfileResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``UserProfileResource``
   :type properties: :py:class:`~@aws-cdk/aws-opsworks.cloudformation.UserProfileResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


   .. py:attribute:: userProfileSshUsername

      :type: :py:class:`~@aws-cdk/aws-opsworks.UserProfileSshUsername` *(readonly)*


UserProfileResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: UserProfileResourceProps



   .. py:attribute:: iamUserArn

      ``AWS::OpsWorks::UserProfile.IamUserArn``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-userprofile.html#cfn-opsworks-userprofile-iamuserarn


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: allowSelfManagement

      ``AWS::OpsWorks::UserProfile.AllowSelfManagement``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-userprofile.html#cfn-opsworks-userprofile-allowselfmanagement


      :type: boolean or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: sshPublicKey

      ``AWS::OpsWorks::UserProfile.SshPublicKey``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-userprofile.html#cfn-opsworks-userprofile-sshpublickey


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: sshUsername

      ``AWS::OpsWorks::UserProfile.SshUsername``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-userprofile.html#cfn-opsworks-userprofile-sshusername


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


VolumeResource
~~~~~~~~~~~~~~

.. py:class:: VolumeResource(parent, name, properties)

   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``VolumeResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``VolumeResource``
   :type properties: :py:class:`~@aws-cdk/aws-opsworks.cloudformation.VolumeResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


VolumeResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: VolumeResourceProps



   .. py:attribute:: ec2VolumeId

      ``AWS::OpsWorks::Volume.Ec2VolumeId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-volume.html#cfn-opsworks-volume-ec2volumeid


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: stackId

      ``AWS::OpsWorks::Volume.StackId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-volume.html#cfn-opsworks-volume-stackid


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: mountPoint

      ``AWS::OpsWorks::Volume.MountPoint``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-volume.html#cfn-opsworks-volume-mountpoint


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: volumeName

      ``AWS::OpsWorks::Volume.Name``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-volume.html#cfn-opsworks-volume-name


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined



.. py:currentmodule:: @aws-cdk/aws-opsworks

