versions/0.8.1/_sources/refs/_aws-cdk_aws-opsworks.rst.txt
.. @jsii-pacmak:meta@ {"fingerprint":"+Wu/AxHX7026MGqHqr68nnBvBB+rZSgJrYCPPzzTMdw="}

@aws-cdk/aws-opsworks
=====================

.. tabs::

   .. group-tab:: Java

      View in `Maven Central <https://repo1.maven.org/maven2/software/amazon/awscdk/opsworks/0.8.1/>`_

      **Apache Buildr**:

      .. code-block:: none

         'software.amazon.awscdk:opsworks:jar:0.8.1'

      **Apache Ivy**:

      .. code-block:: xml

         <dependency groupId="software.amazon.awscdk" name="opsworks" rev="0.8.1"/>

      **Apache Maven**:

      .. code-block:: xml

         <dependency>
           <groupId>software.amazon.awscdk</groupId>
           <artifactId>opsworks</artifactId>
           <version>0.8.1</version>
         </dependency>

      **Gradle / Grails**:

      .. code-block:: none

         compile 'software.amazon.awscdk:opsworks:0.8.1'

      **Groovy Grape**:

      .. code-block:: none

         @Grapes(
         @Grab(group='software.amazon.awscdk', module='opsworks', version='0.8.1')
         )


   .. group-tab:: JavaScript

      View in `NPM <https://www.npmjs.com/package/@aws-cdk/aws-opsworks/v/0.8.1>`_

      **npm**:

      .. code-block:: console

         $ npm i @aws-cdk/aws-opsworks@0.8.1

      **package.json**:

      .. code-block:: js

         {
           "@aws-cdk/aws-opsworks": "^0.8.1"
         }

      **yarn**:

      .. code-block:: console

         $ yarn add @aws-cdk/aws-opsworks@0.8.1


   .. group-tab:: TypeScript

      View in `NPM <https://www.npmjs.com/package/@aws-cdk/aws-opsworks/v/0.8.1>`_

      **npm**:

      .. code-block:: console

         $ npm i @aws-cdk/aws-opsworks@0.8.1

      **package.json**:

      .. code-block:: js

         {
           "@aws-cdk/aws-opsworks": "^0.8.1"
         }

      **yarn**:

      .. code-block:: console

         $ yarn add @aws-cdk/aws-opsworks@0.8.1



.. mdinclude:: ./__aws-cdk_aws-opsworks.README.md

Reference
---------

.. py:module:: @aws-cdk/aws-opsworks

InstanceAvailabilityZone
^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: InstanceAvailabilityZone([valueOrFunction])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.opsworks.InstanceAvailabilityZone;

      .. code-tab:: javascript

         const { InstanceAvailabilityZone } = require('@aws-cdk/aws-opsworks');

      .. code-tab:: typescript

         import { InstanceAvailabilityZone } from '@aws-cdk/aws-opsworks';



   :extends: :py:class:`@aws-cdk/cdk.Token`
   :param valueOrFunction: 
   :type valueOrFunction: any or undefined

InstancePrivateDnsName
^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: InstancePrivateDnsName([valueOrFunction])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.opsworks.InstancePrivateDnsName;

      .. code-tab:: javascript

         const { InstancePrivateDnsName } = require('@aws-cdk/aws-opsworks');

      .. code-tab:: typescript

         import { InstancePrivateDnsName } from '@aws-cdk/aws-opsworks';



   :extends: :py:class:`@aws-cdk/cdk.Token`
   :param valueOrFunction: 
   :type valueOrFunction: any or undefined

InstancePrivateIp
^^^^^^^^^^^^^^^^^

.. py:class:: InstancePrivateIp([valueOrFunction])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.opsworks.InstancePrivateIp;

      .. code-tab:: javascript

         const { InstancePrivateIp } = require('@aws-cdk/aws-opsworks');

      .. code-tab:: typescript

         import { InstancePrivateIp } from '@aws-cdk/aws-opsworks';



   :extends: :py:class:`@aws-cdk/cdk.Token`
   :param valueOrFunction: 
   :type valueOrFunction: any or undefined

InstancePublicDnsName
^^^^^^^^^^^^^^^^^^^^^

.. py:class:: InstancePublicDnsName([valueOrFunction])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.opsworks.InstancePublicDnsName;

      .. code-tab:: javascript

         const { InstancePublicDnsName } = require('@aws-cdk/aws-opsworks');

      .. code-tab:: typescript

         import { InstancePublicDnsName } from '@aws-cdk/aws-opsworks';



   :extends: :py:class:`@aws-cdk/cdk.Token`
   :param valueOrFunction: 
   :type valueOrFunction: any or undefined

InstancePublicIp
^^^^^^^^^^^^^^^^

.. py:class:: InstancePublicIp([valueOrFunction])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.opsworks.InstancePublicIp;

      .. code-tab:: javascript

         const { InstancePublicIp } = require('@aws-cdk/aws-opsworks');

      .. code-tab:: typescript

         import { InstancePublicIp } from '@aws-cdk/aws-opsworks';



   :extends: :py:class:`@aws-cdk/cdk.Token`
   :param valueOrFunction: 
   :type valueOrFunction: any or undefined

UserProfileSshUsername
^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: UserProfileSshUsername([valueOrFunction])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.opsworks.UserProfileSshUsername;

      .. code-tab:: javascript

         const { UserProfileSshUsername } = require('@aws-cdk/aws-opsworks');

      .. code-tab:: typescript

         import { UserProfileSshUsername } from '@aws-cdk/aws-opsworks';



   :extends: :py:class:`@aws-cdk/cdk.Token`
   :param valueOrFunction: 
   :type valueOrFunction: any or undefined


cloudformation
^^^^^^^^^^^^^^
.. py:module:: @aws-cdk/aws-opsworks.cloudformation

AppResource
~~~~~~~~~~~

.. py:class:: AppResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.opsworks.cloudformation.AppResource;

      .. code-tab:: javascript

         const { cloudformation.AppResource } = require('@aws-cdk/aws-opsworks');

      .. code-tab:: typescript

         import { cloudformation.AppResource } from '@aws-cdk/aws-opsworks';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``AppResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``AppResource``
   :type properties: :py:class:`~@aws-cdk/aws-opsworks.cloudformation.AppResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*

   .. py:class:: DataSourceProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.opsworks.cloudformation.AppResource.DataSourceProperty;

         .. code-tab:: javascript

            // cloudformation.AppResource.DataSourceProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.AppResource.DataSourceProperty } from '@aws-cdk/aws-opsworks';





      .. py:attribute:: arn

         ``AppResource.DataSourceProperty.Arn``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-opsworks-app-datasource.html#cfn-opsworks-app-datasource-arn


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: databaseName

         ``AppResource.DataSourceProperty.DatabaseName``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-opsworks-app-datasource.html#cfn-opsworks-app-datasource-databasename


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: type

         ``AppResource.DataSourceProperty.Type``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-opsworks-app-datasource.html#cfn-opsworks-app-datasource-type


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:class:: EnvironmentVariableProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.opsworks.cloudformation.AppResource.EnvironmentVariableProperty;

         .. code-tab:: javascript

            // cloudformation.AppResource.EnvironmentVariableProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.AppResource.EnvironmentVariableProperty } from '@aws-cdk/aws-opsworks';





      .. py:attribute:: key

         ``AppResource.EnvironmentVariableProperty.Key``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-opsworks-app-environment.html#cfn-opsworks-app-environment-key


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: secure

         ``AppResource.EnvironmentVariableProperty.Secure``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-opsworks-app-environment.html#cfn-opsworks-app-environment-secure


         :type: boolean or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: value

         ``AppResource.EnvironmentVariableProperty.Value``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-opsworks-app-environment.html#value


         :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:class:: SourceProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.opsworks.cloudformation.AppResource.SourceProperty;

         .. code-tab:: javascript

            // cloudformation.AppResource.SourceProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.AppResource.SourceProperty } from '@aws-cdk/aws-opsworks';





      .. py:attribute:: password

         ``AppResource.SourceProperty.Password``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-opsworks-stack-source.html#cfn-opsworks-custcookbooksource-pw


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: revision

         ``AppResource.SourceProperty.Revision``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-opsworks-stack-source.html#cfn-opsworks-custcookbooksource-revision


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: sshKey

         ``AppResource.SourceProperty.SshKey``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-opsworks-stack-source.html#cfn-opsworks-custcookbooksource-sshkey


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: type

         ``AppResource.SourceProperty.Type``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-opsworks-stack-source.html#cfn-opsworks-custcookbooksource-type


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: url

         ``AppResource.SourceProperty.Url``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-opsworks-stack-source.html#cfn-opsworks-custcookbooksource-url


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: username

         ``AppResource.SourceProperty.Username``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-opsworks-stack-source.html#cfn-opsworks-custcookbooksource-username


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:class:: SslConfigurationProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.opsworks.cloudformation.AppResource.SslConfigurationProperty;

         .. code-tab:: javascript

            // cloudformation.AppResource.SslConfigurationProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.AppResource.SslConfigurationProperty } from '@aws-cdk/aws-opsworks';





      .. py:attribute:: certificate

         ``AppResource.SslConfigurationProperty.Certificate``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-opsworks-app-sslconfiguration.html#cfn-opsworks-app-sslconfig-certificate


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: chain

         ``AppResource.SslConfigurationProperty.Chain``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-opsworks-app-sslconfiguration.html#cfn-opsworks-app-sslconfig-chain


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: privateKey

         ``AppResource.SslConfigurationProperty.PrivateKey``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-opsworks-app-sslconfiguration.html#cfn-opsworks-app-sslconfig-privatekey


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined



AppResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: AppResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.opsworks.cloudformation.AppResourceProps;

      .. code-tab:: javascript

         // cloudformation.AppResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.AppResourceProps } from '@aws-cdk/aws-opsworks';





   .. py:attribute:: appName

      ``AWS::OpsWorks::App.Name``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-app.html#cfn-opsworks-app-name


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: stackId

      ``AWS::OpsWorks::App.StackId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-app.html#cfn-opsworks-app-stackid


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: type

      ``AWS::OpsWorks::App.Type``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-app.html#cfn-opsworks-app-type


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: appSource

      ``AWS::OpsWorks::App.AppSource``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-app.html#cfn-opsworks-app-appsource


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-opsworks.cloudformation.AppResource.SourceProperty` or undefined


   .. py:attribute:: attributes

      ``AWS::OpsWorks::App.Attributes``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-app.html#cfn-opsworks-app-attributes


      :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: dataSources

      ``AWS::OpsWorks::App.DataSources``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-app.html#cfn-opsworks-app-datasources


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-opsworks.cloudformation.AppResource.DataSourceProperty` or undefined


   .. py:attribute:: description

      ``AWS::OpsWorks::App.Description``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-app.html#cfn-opsworks-app-description


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: domains

      ``AWS::OpsWorks::App.Domains``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-app.html#cfn-opsworks-app-domains


      :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: enableSsl

      ``AWS::OpsWorks::App.EnableSsl``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-app.html#cfn-opsworks-app-enablessl


      :type: boolean or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: environment

      ``AWS::OpsWorks::App.Environment``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-app.html#cfn-opsworks-app-environment


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-opsworks.cloudformation.AppResource.EnvironmentVariableProperty` or undefined


   .. py:attribute:: shortname

      ``AWS::OpsWorks::App.Shortname``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-app.html#cfn-opsworks-app-shortname


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: sslConfiguration

      ``AWS::OpsWorks::App.SslConfiguration``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-app.html#cfn-opsworks-app-sslconfiguration


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-opsworks.cloudformation.AppResource.SslConfigurationProperty` or undefined


ElasticLoadBalancerAttachmentResource
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: ElasticLoadBalancerAttachmentResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.opsworks.cloudformation.ElasticLoadBalancerAttachmentResource;

      .. code-tab:: javascript

         const { cloudformation.ElasticLoadBalancerAttachmentResource } = require('@aws-cdk/aws-opsworks');

      .. code-tab:: typescript

         import { cloudformation.ElasticLoadBalancerAttachmentResource } from '@aws-cdk/aws-opsworks';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``ElasticLoadBalancerAttachmentResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``ElasticLoadBalancerAttachmentResource``
   :type properties: :py:class:`~@aws-cdk/aws-opsworks.cloudformation.ElasticLoadBalancerAttachmentResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


ElasticLoadBalancerAttachmentResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: ElasticLoadBalancerAttachmentResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.opsworks.cloudformation.ElasticLoadBalancerAttachmentResourceProps;

      .. code-tab:: javascript

         // cloudformation.ElasticLoadBalancerAttachmentResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.ElasticLoadBalancerAttachmentResourceProps } from '@aws-cdk/aws-opsworks';





   .. py:attribute:: elasticLoadBalancerName

      ``AWS::OpsWorks::ElasticLoadBalancerAttachment.ElasticLoadBalancerName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-elbattachment.html#cfn-opsworks-elbattachment-elbname


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: layerId

      ``AWS::OpsWorks::ElasticLoadBalancerAttachment.LayerId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-elbattachment.html#cfn-opsworks-elbattachment-layerid


      :type: string or :py:class:`@aws-cdk/cdk.Token`


InstanceResource
~~~~~~~~~~~~~~~~

.. py:class:: InstanceResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.opsworks.cloudformation.InstanceResource;

      .. code-tab:: javascript

         const { cloudformation.InstanceResource } = require('@aws-cdk/aws-opsworks');

      .. code-tab:: typescript

         import { cloudformation.InstanceResource } from '@aws-cdk/aws-opsworks';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``InstanceResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``InstanceResource``
   :type properties: :py:class:`~@aws-cdk/aws-opsworks.cloudformation.InstanceResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


   .. py:attribute:: instanceAvailabilityZone

      :type: :py:class:`~@aws-cdk/aws-opsworks.InstanceAvailabilityZone` *(readonly)*


   .. py:attribute:: instancePrivateDnsName

      :type: :py:class:`~@aws-cdk/aws-opsworks.InstancePrivateDnsName` *(readonly)*


   .. py:attribute:: instancePrivateIp

      :type: :py:class:`~@aws-cdk/aws-opsworks.InstancePrivateIp` *(readonly)*


   .. py:attribute:: instancePublicDnsName

      :type: :py:class:`~@aws-cdk/aws-opsworks.InstancePublicDnsName` *(readonly)*


   .. py:attribute:: instancePublicIp

      :type: :py:class:`~@aws-cdk/aws-opsworks.InstancePublicIp` *(readonly)*

   .. py:class:: BlockDeviceMappingProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.opsworks.cloudformation.InstanceResource.BlockDeviceMappingProperty;

         .. code-tab:: javascript

            // cloudformation.InstanceResource.BlockDeviceMappingProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.InstanceResource.BlockDeviceMappingProperty } from '@aws-cdk/aws-opsworks';





      .. py:attribute:: deviceName

         ``InstanceResource.BlockDeviceMappingProperty.DeviceName``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-opsworks-instance-blockdevicemapping.html#cfn-opsworks-instance-blockdevicemapping-devicename


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: ebs

         ``InstanceResource.BlockDeviceMappingProperty.Ebs``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-opsworks-instance-blockdevicemapping.html#cfn-opsworks-instance-blockdevicemapping-ebs


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-opsworks.cloudformation.InstanceResource.EbsBlockDeviceProperty` or undefined


      .. py:attribute:: noDevice

         ``InstanceResource.BlockDeviceMappingProperty.NoDevice``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-opsworks-instance-blockdevicemapping.html#cfn-opsworks-instance-blockdevicemapping-nodevice


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: virtualName

         ``InstanceResource.BlockDeviceMappingProperty.VirtualName``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-opsworks-instance-blockdevicemapping.html#cfn-opsworks-instance-blockdevicemapping-virtualname


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:class:: EbsBlockDeviceProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.opsworks.cloudformation.InstanceResource.EbsBlockDeviceProperty;

         .. code-tab:: javascript

            // cloudformation.InstanceResource.EbsBlockDeviceProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.InstanceResource.EbsBlockDeviceProperty } from '@aws-cdk/aws-opsworks';





      .. py:attribute:: deleteOnTermination

         ``InstanceResource.EbsBlockDeviceProperty.DeleteOnTermination``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-opsworks-instance-ebsblockdevice.html#cfn-opsworks-instance-ebsblockdevice-deleteontermination


         :type: boolean or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: iops

         ``InstanceResource.EbsBlockDeviceProperty.Iops``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-opsworks-instance-ebsblockdevice.html#cfn-opsworks-instance-ebsblockdevice-iops


         :type: number or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: snapshotId

         ``InstanceResource.EbsBlockDeviceProperty.SnapshotId``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-opsworks-instance-ebsblockdevice.html#cfn-opsworks-instance-ebsblockdevice-snapshotid


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: volumeSize

         ``InstanceResource.EbsBlockDeviceProperty.VolumeSize``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-opsworks-instance-ebsblockdevice.html#cfn-opsworks-instance-ebsblockdevice-volumesize


         :type: number or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: volumeType

         ``InstanceResource.EbsBlockDeviceProperty.VolumeType``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-opsworks-instance-ebsblockdevice.html#cfn-opsworks-instance-ebsblockdevice-volumetype


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:class:: TimeBasedAutoScalingProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.opsworks.cloudformation.InstanceResource.TimeBasedAutoScalingProperty;

         .. code-tab:: javascript

            // cloudformation.InstanceResource.TimeBasedAutoScalingProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.InstanceResource.TimeBasedAutoScalingProperty } from '@aws-cdk/aws-opsworks';





      .. py:attribute:: friday

         ``InstanceResource.TimeBasedAutoScalingProperty.Friday``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-opsworks-instance-timebasedautoscaling.html#cfn-opsworks-instance-timebasedautoscaling-friday


         :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: monday

         ``InstanceResource.TimeBasedAutoScalingProperty.Monday``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-opsworks-instance-timebasedautoscaling.html#cfn-opsworks-instance-timebasedautoscaling-monday


         :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: saturday

         ``InstanceResource.TimeBasedAutoScalingProperty.Saturday``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-opsworks-instance-timebasedautoscaling.html#cfn-opsworks-instance-timebasedautoscaling-saturday


         :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: sunday

         ``InstanceResource.TimeBasedAutoScalingProperty.Sunday``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-opsworks-instance-timebasedautoscaling.html#cfn-opsworks-instance-timebasedautoscaling-sunday


         :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: thursday

         ``InstanceResource.TimeBasedAutoScalingProperty.Thursday``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-opsworks-instance-timebasedautoscaling.html#cfn-opsworks-instance-timebasedautoscaling-thursday


         :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: tuesday

         ``InstanceResource.TimeBasedAutoScalingProperty.Tuesday``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-opsworks-instance-timebasedautoscaling.html#cfn-opsworks-instance-timebasedautoscaling-tuesday


         :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: wednesday

         ``InstanceResource.TimeBasedAutoScalingProperty.Wednesday``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-opsworks-instance-timebasedautoscaling.html#cfn-opsworks-instance-timebasedautoscaling-wednesday


         :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined



InstanceResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: InstanceResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.opsworks.cloudformation.InstanceResourceProps;

      .. code-tab:: javascript

         // cloudformation.InstanceResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.InstanceResourceProps } from '@aws-cdk/aws-opsworks';





   .. py:attribute:: instanceType

      ``AWS::OpsWorks::Instance.InstanceType``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-instance.html#cfn-opsworks-instance-instancetype


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: layerIds

      ``AWS::OpsWorks::Instance.LayerIds``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-instance.html#cfn-opsworks-instance-layerids


      :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: stackId

      ``AWS::OpsWorks::Instance.StackId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-instance.html#cfn-opsworks-instance-stackid


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: agentVersion

      ``AWS::OpsWorks::Instance.AgentVersion``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-instance.html#cfn-opsworks-instance-agentversion


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: amiId

      ``AWS::OpsWorks::Instance.AmiId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-instance.html#cfn-opsworks-instance-amiid


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: architecture

      ``AWS::OpsWorks::Instance.Architecture``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-instance.html#cfn-opsworks-instance-architecture


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: autoScalingType

      ``AWS::OpsWorks::Instance.AutoScalingType``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-instance.html#cfn-opsworks-instance-autoscalingtype


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: availabilityZone

      ``AWS::OpsWorks::Instance.AvailabilityZone``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-instance.html#cfn-opsworks-instance-availabilityzone


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: blockDeviceMappings

      ``AWS::OpsWorks::Instance.BlockDeviceMappings``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-instance.html#cfn-opsworks-instance-blockdevicemappings


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-opsworks.cloudformation.InstanceResource.BlockDeviceMappingProperty` or undefined


   .. py:attribute:: ebsOptimized

      ``AWS::OpsWorks::Instance.EbsOptimized``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-instance.html#cfn-opsworks-instance-ebsoptimized


      :type: boolean or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: elasticIps

      ``AWS::OpsWorks::Instance.ElasticIps``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-instance.html#cfn-opsworks-instance-elasticips


      :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: hostname

      ``AWS::OpsWorks::Instance.Hostname``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-instance.html#cfn-opsworks-instance-hostname


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: installUpdatesOnBoot

      ``AWS::OpsWorks::Instance.InstallUpdatesOnBoot``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-instance.html#cfn-opsworks-instance-installupdatesonboot


      :type: boolean or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: os

      ``AWS::OpsWorks::Instance.Os``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-instance.html#cfn-opsworks-instance-os


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: rootDeviceType

      ``AWS::OpsWorks::Instance.RootDeviceType``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-instance.html#cfn-opsworks-instance-rootdevicetype


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: sshKeyName

      ``AWS::OpsWorks::Instance.SshKeyName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-instance.html#cfn-opsworks-instance-sshkeyname


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: subnetId

      ``AWS::OpsWorks::Instance.SubnetId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-instance.html#cfn-opsworks-instance-subnetid


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: tenancy

      ``AWS::OpsWorks::Instance.Tenancy``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-instance.html#cfn-opsworks-instance-tenancy


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: timeBasedAutoScaling

      ``AWS::OpsWorks::Instance.TimeBasedAutoScaling``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-instance.html#cfn-opsworks-instance-timebasedautoscaling


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-opsworks.cloudformation.InstanceResource.TimeBasedAutoScalingProperty` or undefined


   .. py:attribute:: virtualizationType

      ``AWS::OpsWorks::Instance.VirtualizationType``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-instance.html#cfn-opsworks-instance-virtualizationtype


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: volumes

      ``AWS::OpsWorks::Instance.Volumes``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-instance.html#cfn-opsworks-instance-volumes


      :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined


LayerResource
~~~~~~~~~~~~~

.. py:class:: LayerResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.opsworks.cloudformation.LayerResource;

      .. code-tab:: javascript

         const { cloudformation.LayerResource } = require('@aws-cdk/aws-opsworks');

      .. code-tab:: typescript

         import { cloudformation.LayerResource } from '@aws-cdk/aws-opsworks';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``LayerResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``LayerResource``
   :type properties: :py:class:`~@aws-cdk/aws-opsworks.cloudformation.LayerResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*

   .. py:class:: AutoScalingThresholdsProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.opsworks.cloudformation.LayerResource.AutoScalingThresholdsProperty;

         .. code-tab:: javascript

            // cloudformation.LayerResource.AutoScalingThresholdsProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.LayerResource.AutoScalingThresholdsProperty } from '@aws-cdk/aws-opsworks';





      .. py:attribute:: cpuThreshold

         ``LayerResource.AutoScalingThresholdsProperty.CpuThreshold``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-opsworks-layer-loadbasedautoscaling-autoscalingthresholds.html#cfn-opsworks-layer-loadbasedautoscaling-autoscalingthresholds-cputhreshold


         :type: number or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: ignoreMetricsTime

         ``LayerResource.AutoScalingThresholdsProperty.IgnoreMetricsTime``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-opsworks-layer-loadbasedautoscaling-autoscalingthresholds.html#cfn-opsworks-layer-loadbasedautoscaling-autoscalingthresholds-ignoremetricstime


         :type: number or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: instanceCount

         ``LayerResource.AutoScalingThresholdsProperty.InstanceCount``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-opsworks-layer-loadbasedautoscaling-autoscalingthresholds.html#cfn-opsworks-layer-loadbasedautoscaling-autoscalingthresholds-instancecount


         :type: number or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: loadThreshold

         ``LayerResource.AutoScalingThresholdsProperty.LoadThreshold``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-opsworks-layer-loadbasedautoscaling-autoscalingthresholds.html#cfn-opsworks-layer-loadbasedautoscaling-autoscalingthresholds-loadthreshold


         :type: number or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: memoryThreshold

         ``LayerResource.AutoScalingThresholdsProperty.MemoryThreshold``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-opsworks-layer-loadbasedautoscaling-autoscalingthresholds.html#cfn-opsworks-layer-loadbasedautoscaling-autoscalingthresholds-memorythreshold


         :type: number or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: thresholdsWaitTime

         ``LayerResource.AutoScalingThresholdsProperty.ThresholdsWaitTime``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-opsworks-layer-loadbasedautoscaling-autoscalingthresholds.html#cfn-opsworks-layer-loadbasedautoscaling-autoscalingthresholds-thresholdwaittime


         :type: number or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:class:: LifecycleEventConfigurationProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.opsworks.cloudformation.LayerResource.LifecycleEventConfigurationProperty;

         .. code-tab:: javascript

            // cloudformation.LayerResource.LifecycleEventConfigurationProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.LayerResource.LifecycleEventConfigurationProperty } from '@aws-cdk/aws-opsworks';





      .. py:attribute:: shutdownEventConfiguration

         ``LayerResource.LifecycleEventConfigurationProperty.ShutdownEventConfiguration``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-opsworks-layer-lifecycleeventconfiguration.html#cfn-opsworks-layer-lifecycleconfiguration-shutdowneventconfiguration


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-opsworks.cloudformation.LayerResource.ShutdownEventConfigurationProperty` or undefined


   .. py:class:: LoadBasedAutoScalingProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.opsworks.cloudformation.LayerResource.LoadBasedAutoScalingProperty;

         .. code-tab:: javascript

            // cloudformation.LayerResource.LoadBasedAutoScalingProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.LayerResource.LoadBasedAutoScalingProperty } from '@aws-cdk/aws-opsworks';





      .. py:attribute:: downScaling

         ``LayerResource.LoadBasedAutoScalingProperty.DownScaling``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-opsworks-layer-loadbasedautoscaling.html#cfn-opsworks-layer-loadbasedautoscaling-downscaling


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-opsworks.cloudformation.LayerResource.AutoScalingThresholdsProperty` or undefined


      .. py:attribute:: enable

         ``LayerResource.LoadBasedAutoScalingProperty.Enable``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-opsworks-layer-loadbasedautoscaling.html#cfn-opsworks-layer-loadbasedautoscaling-enable


         :type: boolean or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: upScaling

         ``LayerResource.LoadBasedAutoScalingProperty.UpScaling``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-opsworks-layer-loadbasedautoscaling.html#cfn-opsworks-layer-loadbasedautoscaling-upscaling


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-opsworks.cloudformation.LayerResource.AutoScalingThresholdsProperty` or undefined


   .. py:class:: RecipesProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.opsworks.cloudformation.LayerResource.RecipesProperty;

         .. code-tab:: javascript

            // cloudformation.LayerResource.RecipesProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.LayerResource.RecipesProperty } from '@aws-cdk/aws-opsworks';





      .. py:attribute:: configure

         ``LayerResource.RecipesProperty.Configure``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-opsworks-layer-recipes.html#cfn-opsworks-layer-customrecipes-configure


         :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: deploy

         ``LayerResource.RecipesProperty.Deploy``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-opsworks-layer-recipes.html#cfn-opsworks-layer-customrecipes-deploy


         :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: setup

         ``LayerResource.RecipesProperty.Setup``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-opsworks-layer-recipes.html#cfn-opsworks-layer-customrecipes-setup


         :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: shutdown

         ``LayerResource.RecipesProperty.Shutdown``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-opsworks-layer-recipes.html#cfn-opsworks-layer-customrecipes-shutdown


         :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: undeploy

         ``LayerResource.RecipesProperty.Undeploy``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-opsworks-layer-recipes.html#cfn-opsworks-layer-customrecipes-undeploy


         :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:class:: ShutdownEventConfigurationProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.opsworks.cloudformation.LayerResource.ShutdownEventConfigurationProperty;

         .. code-tab:: javascript

            // cloudformation.LayerResource.ShutdownEventConfigurationProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.LayerResource.ShutdownEventConfigurationProperty } from '@aws-cdk/aws-opsworks';





      .. py:attribute:: delayUntilElbConnectionsDrained

         ``LayerResource.ShutdownEventConfigurationProperty.DelayUntilElbConnectionsDrained``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-opsworks-layer-lifecycleeventconfiguration-shutdowneventconfiguration.html#cfn-opsworks-layer-lifecycleconfiguration-shutdowneventconfiguration-delayuntilelbconnectionsdrained


         :type: boolean or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: executionTimeout

         ``LayerResource.ShutdownEventConfigurationProperty.ExecutionTimeout``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-opsworks-layer-lifecycleeventconfiguration-shutdowneventconfiguration.html#cfn-opsworks-layer-lifecycleconfiguration-shutdowneventconfiguration-executiontimeout


         :type: number or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:class:: VolumeConfigurationProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.opsworks.cloudformation.LayerResource.VolumeConfigurationProperty;

         .. code-tab:: javascript

            // cloudformation.LayerResource.VolumeConfigurationProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.LayerResource.VolumeConfigurationProperty } from '@aws-cdk/aws-opsworks';





      .. py:attribute:: iops

         ``LayerResource.VolumeConfigurationProperty.Iops``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-opsworks-layer-volumeconfiguration.html#cfn-opsworks-layer-volconfig-iops


         :type: number or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: mountPoint

         ``LayerResource.VolumeConfigurationProperty.MountPoint``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-opsworks-layer-volumeconfiguration.html#cfn-opsworks-layer-volconfig-mountpoint


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: numberOfDisks

         ``LayerResource.VolumeConfigurationProperty.NumberOfDisks``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-opsworks-layer-volumeconfiguration.html#cfn-opsworks-layer-volconfig-numberofdisks


         :type: number or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: raidLevel

         ``LayerResource.VolumeConfigurationProperty.RaidLevel``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-opsworks-layer-volumeconfiguration.html#cfn-opsworks-layer-volconfig-raidlevel


         :type: number or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: size

         ``LayerResource.VolumeConfigurationProperty.Size``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-opsworks-layer-volumeconfiguration.html#cfn-opsworks-layer-volconfig-size


         :type: number or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: volumeType

         ``LayerResource.VolumeConfigurationProperty.VolumeType``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-opsworks-layer-volumeconfiguration.html#cfn-opsworks-layer-volconfig-volumetype


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined



LayerResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: LayerResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.opsworks.cloudformation.LayerResourceProps;

      .. code-tab:: javascript

         // cloudformation.LayerResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.LayerResourceProps } from '@aws-cdk/aws-opsworks';





   .. py:attribute:: autoAssignElasticIps

      ``AWS::OpsWorks::Layer.AutoAssignElasticIps``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-layer.html#cfn-opsworks-layer-autoassignelasticips


      :type: boolean or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: autoAssignPublicIps

      ``AWS::OpsWorks::Layer.AutoAssignPublicIps``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-layer.html#cfn-opsworks-layer-autoassignpublicips


      :type: boolean or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: enableAutoHealing

      ``AWS::OpsWorks::Layer.EnableAutoHealing``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-layer.html#cfn-opsworks-layer-enableautohealing


      :type: boolean or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: layerName

      ``AWS::OpsWorks::Layer.Name``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-layer.html#cfn-opsworks-layer-name


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: shortname

      ``AWS::OpsWorks::Layer.Shortname``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-layer.html#cfn-opsworks-layer-shortname


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: stackId

      ``AWS::OpsWorks::Layer.StackId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-layer.html#cfn-opsworks-layer-stackid


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: type

      ``AWS::OpsWorks::Layer.Type``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-layer.html#cfn-opsworks-layer-type


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: attributes

      ``AWS::OpsWorks::Layer.Attributes``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-layer.html#cfn-opsworks-layer-attributes


      :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: customInstanceProfileArn

      ``AWS::OpsWorks::Layer.CustomInstanceProfileArn``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-layer.html#cfn-opsworks-layer-custominstanceprofilearn


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: customJson

      ``AWS::OpsWorks::Layer.CustomJson``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-layer.html#cfn-opsworks-layer-customjson


      :type: json or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: customRecipes

      ``AWS::OpsWorks::Layer.CustomRecipes``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-layer.html#cfn-opsworks-layer-customrecipes


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-opsworks.cloudformation.LayerResource.RecipesProperty` or undefined


   .. py:attribute:: customSecurityGroupIds

      ``AWS::OpsWorks::Layer.CustomSecurityGroupIds``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-layer.html#cfn-opsworks-layer-customsecuritygroupids


      :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: installUpdatesOnBoot

      ``AWS::OpsWorks::Layer.InstallUpdatesOnBoot``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-layer.html#cfn-opsworks-layer-installupdatesonboot


      :type: boolean or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: lifecycleEventConfiguration

      ``AWS::OpsWorks::Layer.LifecycleEventConfiguration``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-layer.html#cfn-opsworks-layer-lifecycleeventconfiguration


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-opsworks.cloudformation.LayerResource.LifecycleEventConfigurationProperty` or undefined


   .. py:attribute:: loadBasedAutoScaling

      ``AWS::OpsWorks::Layer.LoadBasedAutoScaling``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-layer.html#cfn-opsworks-layer-loadbasedautoscaling


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-opsworks.cloudformation.LayerResource.LoadBasedAutoScalingProperty` or undefined


   .. py:attribute:: packages

      ``AWS::OpsWorks::Layer.Packages``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-layer.html#cfn-opsworks-layer-packages


      :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: tags

      ``AWS::OpsWorks::Layer.Tags``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-layer.html#cfn-opsworks-layer-tags


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Tag` or undefined


   .. py:attribute:: useEbsOptimizedInstances

      ``AWS::OpsWorks::Layer.UseEbsOptimizedInstances``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-layer.html#cfn-opsworks-layer-useebsoptimizedinstances


      :type: boolean or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: volumeConfigurations

      ``AWS::OpsWorks::Layer.VolumeConfigurations``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-layer.html#cfn-opsworks-layer-volumeconfigurations


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-opsworks.cloudformation.LayerResource.VolumeConfigurationProperty` or undefined


StackResource
~~~~~~~~~~~~~

.. py:class:: StackResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.opsworks.cloudformation.StackResource;

      .. code-tab:: javascript

         const { cloudformation.StackResource } = require('@aws-cdk/aws-opsworks');

      .. code-tab:: typescript

         import { cloudformation.StackResource } from '@aws-cdk/aws-opsworks';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``StackResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``StackResource``
   :type properties: :py:class:`~@aws-cdk/aws-opsworks.cloudformation.StackResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*

   .. py:class:: ChefConfigurationProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.opsworks.cloudformation.StackResource.ChefConfigurationProperty;

         .. code-tab:: javascript

            // cloudformation.StackResource.ChefConfigurationProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.StackResource.ChefConfigurationProperty } from '@aws-cdk/aws-opsworks';





      .. py:attribute:: berkshelfVersion

         ``StackResource.ChefConfigurationProperty.BerkshelfVersion``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-opsworks-stack-chefconfiguration.html#cfn-opsworks-chefconfiguration-berkshelfversion


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: manageBerkshelf

         ``StackResource.ChefConfigurationProperty.ManageBerkshelf``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-opsworks-stack-chefconfiguration.html#cfn-opsworks-chefconfiguration-berkshelfversion


         :type: boolean or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:class:: ElasticIpProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.opsworks.cloudformation.StackResource.ElasticIpProperty;

         .. code-tab:: javascript

            // cloudformation.StackResource.ElasticIpProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.StackResource.ElasticIpProperty } from '@aws-cdk/aws-opsworks';





      .. py:attribute:: ip

         ``StackResource.ElasticIpProperty.Ip``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-opsworks-stack-elasticip.html#cfn-opsworks-stack-elasticip-ip


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: name

         ``StackResource.ElasticIpProperty.Name``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-opsworks-stack-elasticip.html#cfn-opsworks-stack-elasticip-name


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:class:: RdsDbInstanceProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.opsworks.cloudformation.StackResource.RdsDbInstanceProperty;

         .. code-tab:: javascript

            // cloudformation.StackResource.RdsDbInstanceProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.StackResource.RdsDbInstanceProperty } from '@aws-cdk/aws-opsworks';





      .. py:attribute:: dbPassword

         ``StackResource.RdsDbInstanceProperty.DbPassword``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-opsworks-stack-rdsdbinstance.html#cfn-opsworks-stack-rdsdbinstance-dbpassword


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: dbUser

         ``StackResource.RdsDbInstanceProperty.DbUser``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-opsworks-stack-rdsdbinstance.html#cfn-opsworks-stack-rdsdbinstance-dbuser


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: rdsDbInstanceArn

         ``StackResource.RdsDbInstanceProperty.RdsDbInstanceArn``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-opsworks-stack-rdsdbinstance.html#cfn-opsworks-stack-rdsdbinstance-rdsdbinstancearn


         :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:class:: SourceProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.opsworks.cloudformation.StackResource.SourceProperty;

         .. code-tab:: javascript

            // cloudformation.StackResource.SourceProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.StackResource.SourceProperty } from '@aws-cdk/aws-opsworks';





      .. py:attribute:: password

         ``StackResource.SourceProperty.Password``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-opsworks-stack-source.html#cfn-opsworks-custcookbooksource-password


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: revision

         ``StackResource.SourceProperty.Revision``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-opsworks-stack-source.html#cfn-opsworks-custcookbooksource-revision


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: sshKey

         ``StackResource.SourceProperty.SshKey``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-opsworks-stack-source.html#cfn-opsworks-custcookbooksource-sshkey


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: type

         ``StackResource.SourceProperty.Type``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-opsworks-stack-source.html#cfn-opsworks-custcookbooksource-type


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: url

         ``StackResource.SourceProperty.Url``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-opsworks-stack-source.html#cfn-opsworks-custcookbooksource-url


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: username

         ``StackResource.SourceProperty.Username``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-opsworks-stack-source.html#cfn-opsworks-custcookbooksource-username


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:class:: StackConfigurationManagerProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.opsworks.cloudformation.StackResource.StackConfigurationManagerProperty;

         .. code-tab:: javascript

            // cloudformation.StackResource.StackConfigurationManagerProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.StackResource.StackConfigurationManagerProperty } from '@aws-cdk/aws-opsworks';





      .. py:attribute:: name

         ``StackResource.StackConfigurationManagerProperty.Name``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-opsworks-stack-stackconfigmanager.html#cfn-opsworks-configmanager-name


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: version

         ``StackResource.StackConfigurationManagerProperty.Version``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-opsworks-stack-stackconfigmanager.html#cfn-opsworks-configmanager-version


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined



StackResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: StackResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.opsworks.cloudformation.StackResourceProps;

      .. code-tab:: javascript

         // cloudformation.StackResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.StackResourceProps } from '@aws-cdk/aws-opsworks';





   .. py:attribute:: defaultInstanceProfileArn

      ``AWS::OpsWorks::Stack.DefaultInstanceProfileArn``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-stack.html#cfn-opsworks-stack-defaultinstanceprof


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: stackName

      ``AWS::OpsWorks::Stack.Name``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-stack.html#cfn-opsworks-stack-name


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: serviceRoleArn

      ``AWS::OpsWorks::Stack.ServiceRoleArn``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-stack.html#cfn-opsworks-stack-servicerolearn


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: agentVersion

      ``AWS::OpsWorks::Stack.AgentVersion``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-stack.html#cfn-opsworks-stack-agentversion


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: attributes

      ``AWS::OpsWorks::Stack.Attributes``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-stack.html#cfn-opsworks-stack-attributes


      :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: chefConfiguration

      ``AWS::OpsWorks::Stack.ChefConfiguration``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-stack.html#cfn-opsworks-stack-chefconfiguration


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-opsworks.cloudformation.StackResource.ChefConfigurationProperty` or undefined


   .. py:attribute:: cloneAppIds

      ``AWS::OpsWorks::Stack.CloneAppIds``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-stack.html#cfn-opsworks-stack-cloneappids


      :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: clonePermissions

      ``AWS::OpsWorks::Stack.ClonePermissions``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-stack.html#cfn-opsworks-stack-clonepermissions


      :type: boolean or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: configurationManager

      ``AWS::OpsWorks::Stack.ConfigurationManager``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-stack.html#cfn-opsworks-stack-configmanager


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-opsworks.cloudformation.StackResource.StackConfigurationManagerProperty` or undefined


   .. py:attribute:: customCookbooksSource

      ``AWS::OpsWorks::Stack.CustomCookbooksSource``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-stack.html#cfn-opsworks-stack-custcookbooksource


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-opsworks.cloudformation.StackResource.SourceProperty` or undefined


   .. py:attribute:: customJson

      ``AWS::OpsWorks::Stack.CustomJson``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-stack.html#cfn-opsworks-stack-custjson


      :type: json or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: defaultAvailabilityZone

      ``AWS::OpsWorks::Stack.DefaultAvailabilityZone``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-stack.html#cfn-opsworks-stack-defaultaz


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: defaultOs

      ``AWS::OpsWorks::Stack.DefaultOs``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-stack.html#cfn-opsworks-stack-defaultos


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: defaultRootDeviceType

      ``AWS::OpsWorks::Stack.DefaultRootDeviceType``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-stack.html#cfn-opsworks-stack-defaultrootdevicetype


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: defaultSshKeyName

      ``AWS::OpsWorks::Stack.DefaultSshKeyName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-stack.html#cfn-opsworks-stack-defaultsshkeyname


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: defaultSubnetId

      ``AWS::OpsWorks::Stack.DefaultSubnetId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-stack.html#defaultsubnet


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: ecsClusterArn

      ``AWS::OpsWorks::Stack.EcsClusterArn``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-stack.html#cfn-opsworks-stack-ecsclusterarn


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: elasticIps

      ``AWS::OpsWorks::Stack.ElasticIps``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-stack.html#cfn-opsworks-stack-elasticips


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-opsworks.cloudformation.StackResource.ElasticIpProperty` or undefined


   .. py:attribute:: hostnameTheme

      ``AWS::OpsWorks::Stack.HostnameTheme``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-stack.html#cfn-opsworks-stack-hostnametheme


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: rdsDbInstances

      ``AWS::OpsWorks::Stack.RdsDbInstances``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-stack.html#cfn-opsworks-stack-rdsdbinstances


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-opsworks.cloudformation.StackResource.RdsDbInstanceProperty` or undefined


   .. py:attribute:: sourceStackId

      ``AWS::OpsWorks::Stack.SourceStackId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-stack.html#cfn-opsworks-stack-sourcestackid


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: tags

      ``AWS::OpsWorks::Stack.Tags``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-stack.html#cfn-opsworks-stack-tags


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Tag` or undefined


   .. py:attribute:: useCustomCookbooks

      ``AWS::OpsWorks::Stack.UseCustomCookbooks``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-stack.html#usecustcookbooks


      :type: boolean or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: useOpsworksSecurityGroups

      ``AWS::OpsWorks::Stack.UseOpsworksSecurityGroups``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-stack.html#cfn-opsworks-stack-useopsworkssecuritygroups


      :type: boolean or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: vpcId

      ``AWS::OpsWorks::Stack.VpcId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-stack.html#cfn-opsworks-stack-vpcid


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


UserProfileResource
~~~~~~~~~~~~~~~~~~~

.. py:class:: UserProfileResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.opsworks.cloudformation.UserProfileResource;

      .. code-tab:: javascript

         const { cloudformation.UserProfileResource } = require('@aws-cdk/aws-opsworks');

      .. code-tab:: typescript

         import { cloudformation.UserProfileResource } from '@aws-cdk/aws-opsworks';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``UserProfileResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``UserProfileResource``
   :type properties: :py:class:`~@aws-cdk/aws-opsworks.cloudformation.UserProfileResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


   .. py:attribute:: userProfileSshUsername

      :type: :py:class:`~@aws-cdk/aws-opsworks.UserProfileSshUsername` *(readonly)*


UserProfileResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: UserProfileResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.opsworks.cloudformation.UserProfileResourceProps;

      .. code-tab:: javascript

         // cloudformation.UserProfileResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.UserProfileResourceProps } from '@aws-cdk/aws-opsworks';





   .. py:attribute:: iamUserArn

      ``AWS::OpsWorks::UserProfile.IamUserArn``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-userprofile.html#cfn-opsworks-userprofile-iamuserarn


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: allowSelfManagement

      ``AWS::OpsWorks::UserProfile.AllowSelfManagement``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-userprofile.html#cfn-opsworks-userprofile-allowselfmanagement


      :type: boolean or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: sshPublicKey

      ``AWS::OpsWorks::UserProfile.SshPublicKey``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-userprofile.html#cfn-opsworks-userprofile-sshpublickey


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: sshUsername

      ``AWS::OpsWorks::UserProfile.SshUsername``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-userprofile.html#cfn-opsworks-userprofile-sshusername


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


VolumeResource
~~~~~~~~~~~~~~

.. py:class:: VolumeResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.opsworks.cloudformation.VolumeResource;

      .. code-tab:: javascript

         const { cloudformation.VolumeResource } = require('@aws-cdk/aws-opsworks');

      .. code-tab:: typescript

         import { cloudformation.VolumeResource } from '@aws-cdk/aws-opsworks';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``VolumeResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``VolumeResource``
   :type properties: :py:class:`~@aws-cdk/aws-opsworks.cloudformation.VolumeResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


VolumeResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: VolumeResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.opsworks.cloudformation.VolumeResourceProps;

      .. code-tab:: javascript

         // cloudformation.VolumeResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.VolumeResourceProps } from '@aws-cdk/aws-opsworks';





   .. py:attribute:: ec2VolumeId

      ``AWS::OpsWorks::Volume.Ec2VolumeId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-volume.html#cfn-opsworks-volume-ec2volumeid


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: stackId

      ``AWS::OpsWorks::Volume.StackId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-volume.html#cfn-opsworks-volume-stackid


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: mountPoint

      ``AWS::OpsWorks::Volume.MountPoint``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-volume.html#cfn-opsworks-volume-mountpoint


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: volumeName

      ``AWS::OpsWorks::Volume.Name``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-opsworks-volume.html#cfn-opsworks-volume-name


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined



.. py:currentmodule:: @aws-cdk/aws-opsworks

